2001-03-01  Nicholas Duffek  <nsd@redhat.com>

	* README.GDBTK: Minor spelling, grammar, and formatting fixes.

2001-03-01  Keith Seitz  <keiths@cygnus.com>

	* library/managedwin.ith: Move all implementations into
	managedwin.itb.
	(public variable nosize): Delete.
	(freeze_me, thaw_me, make_icon_window): Prepend with
	underscore to remind people these are not public
	methods/procs.
	(protected variable Top, screenwidth, screenheight): Ditto
	for these variables.
	(protected common manage_active, mainwindow): Delete.
	(enable): Delete.
	(reconfig): Add empty body.
	* library/managedwin.itb: Move all implementations from
	header here.
	Update all references to renamed variables/methods/procs.
	(destructor, restart, shutdown, _open, find) Let
	Itcl tell us which ManagedWins we have lying around.
	(enable): Delete.
	(reconfig): It's empty. Moved empty body to header.

2001-03-01  Nicholas Duffek  <nsd@redhat.com>

	* library/managedwin.itb (ManagedWin::shutdown): Save each
	managed window's geometry as a preference.
	* library/managedwin.ith (ManagedWin::destructor): Don't save
	managed windows' geometries as preferences.

2001-03-01  Nicholas Duffek  <nsd@redhat.com>

	* library/srctextwin.itb (SrcTextWin::location): Clear previous
	pane's cursor after switching panes.

2001-03-01  Nicholas Duffek  <nsd@redhat.com>

	* library/srctextwin.itb (config_win): Give focus to $win.

Tue Feb 27 23:56:23 2001  Andrew Cagney  <ac131313@redhat.com>

	* generic/gdbtk-cmds.c: Include recently created "regcache.h"

2001-02-27  Keith Seitz  <kseitz@nwlink.com>

	* generic/gdbtk-cmds.c (gdb_fetch_registers): Mark
	the result as generating a list only if it really does
	generate a list.

2001-02-21  Fernando Nasser  <fnasser@redhat.com>

	* TODO: New file.  Initial version of the TODO file, as posted to the
	insight list circa October 2000.

2001-02-14  Fernando Nasser  <fnasser@redhat.com>

	From 2001-02-09  Martin Hunt  <hunt@redhat.com>