@@ -51,15 +51,6 @@ extern void write_inferior_status_register (struct inferior_status
 					    *inf_status, int regno,
 					    LONGEST val);
 
-/* This macro gives the number of registers actually in use by the
-   inferior.  This may be less than the total number of registers,
-   perhaps depending on the actual CPU in use or program being run.  
-   FIXME: This could be replaced by the new MULTI_ARCH capability.  */
-
-#ifndef ARCH_NUM_REGS
-#define ARCH_NUM_REGS NUM_REGS
-#endif
-
 extern void set_sigint_trap (void);
 
 extern void clear_sigint_trap (void);
