@@ -423,7 +423,7 @@ fetch_inferior_registers (int regno)
     }
   else
     {
-      for (regno = 0; regno < ARCH_NUM_REGS; regno++)
+      for (regno = 0; regno < NUM_REGS; regno++)
 	{
 	  fetch_register (regno);
 	}
@@ -487,7 +487,7 @@ store_inferior_registers (int regno)
     }
   else
     {
-      for (regno = 0; regno < ARCH_NUM_REGS; regno++)
+      for (regno = 0; regno < NUM_REGS; regno++)
 	{
 	  store_register (regno);
 	}
