@@ -1,3 +1,11 @@
+2001-03-08  Andrew Cagney  <ac131313@redhat.com>
+
+	* mi-main.c (mi_cmd_data_list_register_names): Use NUM_REGS, not
+	ARCH_NUM_REGS.
+	(mi_cmd_data_list_changed_registers): Ditto.
+	(mi_cmd_data_list_register_values): Ditto.
+	(mi_cmd_data_write_register_values): Ditto.
+
 2001-03-06  Kevin Buettner  <kevinb@redhat.com>
 
 	* gdbmi.texinfo, mi-cmd-disas.c, mi-cmd-stack.c, mi-cmd-var.c,
